# ibus-table-zhuyin

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README  RELEASE-NOTES.txt
SPECS/: ibus-table-zhuyin.spec  ibus-table-zhuyin.spec.in
data/: zhuyin.txt.in
src/: CMakeLists.txt  cin2ibus.c
